fixed inquiry form

--- a/app/treatmentCenterDetail/inquiryFormCard/view.html
+++ b/app/treatmentCenterDetail/inquiryFormCard/view.html
@@ -1,6 +1,6 @@
 <div class="center-detail-card">
   <card-heading>Inquiry</card-heading>
-  <form ng-submit="$ctrl.submit()" novalidate="novalidate" __bizdiag="-483366306" __biza="WJ__">
+  <form novalidate="novalidate" __bizdiag="-483366306" __biza="WJ__" name="$ctrl.inquiryForm">
     <!--　Name -->
     <div class="adn-row">
       <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
@@ -16,7 +16,9 @@
         <label class="inquiry-form-label">Email:</label>
       </div>
       <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
-        <input ng-model="$ctrl.email" type="text" class="form-control required" placeholder="Email" email="true" name="email" />
+        <!-- <input ng-model="$ctrl.email" type="text" class="form-control required" placeholder="Email" email="true" name="email" /> -->
+        <input placeholder="Email" id="email" name="email" class="form-control required ng-pristine ng-empty ng-valid-email ng-invalid ng-invalid-required ng-valid-pattern ng-touched" type="email" ng-model="$ctrl.email" required="true" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i">
+        <p ng-show="$ctrl.inquiryForm.$error.pattern" class="help-block">Invalid Email</p>
       </div>
     </div>
     <!--　Phone -->
@@ -25,7 +27,9 @@
         <label class="inquiry-form-label">Phone:</label>
       </div>
       <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
-        <input ng-model="$ctrl.phone" type="text" class="form-control required" number="true" minlength="10" maxlength="10" placeholder="Phone" name="phone" />
+        <!-- <input ng-model="$ctrl.phone" type="text" class="form-control required" number="true" minlength="10" maxlength="10" placeholder="Phone" name="phone" /> -->
+        <input placeholder="eg. (601) 521-1542" name="phone" ng-change="$ctrl.testNum()" class="form-control required ng-pristine ng-empty ng-invalid ng-invalid-required ng-valid-minlength ng-valid-maxlength ng-touched" type="text" required="true" phone-input="" restrict="reject" ng-minlength="14" maxlength="14" ng-model="$ctrl.phone" style="">
+        <p ng-show="$ctrl.inquiryForm.phone.$error.pattern || $ctrl.inquiryForm.phone.$error.minlength || $ctrl.inquiryForm.phone.$error.maxlength" class="help-block ng-hide">Invalid US number.</p>
       </div>
     </div>
     <!--　Message -->
@@ -40,7 +44,7 @@
     <!--　Submit -->
     <div class="adn-row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <input type="submit" class="btn adn-btn adn-btn-full" value="submit" />
+        <input type="button" ng-click="$ctrl.submit()" class="btn adn-btn adn-btn-full" value="submit">
       </div>
     </div>
   </form>
