fixed filter issue

--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -7,7 +7,7 @@
           </label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <div ng-dropdown-multiselect="" options="$ctrl.addListingCategories" checkboxes="true" selected-model="$root.multiselectModelCategories" extra-settings="$ctrl.multiselectModelSettings" name="categories" required=""></div>
+          <div ng-dropdown-multiselect="" options="$ctrl.addListingCategories" checkboxes="true" selected-model="$root.multiselectModelCategories" extra-settings="$ctrl.multiselectModelSettings" name="categories" required="" id="category_step4"></div>
           <!-- <p class="help-block">Required</p> -->
         </div>
 
