--- a/app/header/view.html
+++ b/app/header/view.html
@@ -47,7 +47,7 @@
           </a>
         </li>
       </ul>
-      <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=andr923 "></script>
+      <!--<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=andr923 "></script>-->
       <div class="nav_align">
         <ul class="nav navbar-nav new_class_for_sub_menu header_main_menu fonnt ">
           <li ng-if="$root.login==1" ng-repeat="link in $ctrl.internalLinks" ng-model="$root.login">
