--- a/app/sidePanel/areaFilterCard/view.html
+++ b/app/sidePanel/areaFilterCard/view.html
@@ -5,10 +5,10 @@
       <a href class="area-filter-link" ng-class="$ctrl.stateLinkClass" ng-click="$ctrl.goToState()">{{ $ctrl.stateName }}</a>
     </li>
     <li>
-      <a href class="area-filter-link" ng-click="$ctrl.goToCities()">View All Cities</a>
+      <label><a href class="area-filter-link" ng-click="$ctrl.goToCities()">View All Cities</a></label>
     </li>
     <li>
-      <a href class="area-filter-link" ng-click="$ctrl.goToCounties()">View All Counties</a>
+      <label><a href class="area-filter-link" ng-click="$ctrl.goToCounties()">View All Counties</a></label>
     </li>
   </ul>
 </div>
