--- a/app/sidePanel/findTreatmentSideCard/view.html
+++ b/app/sidePanel/findTreatmentSideCard/view.html
@@ -1,5 +1,6 @@
 <div class="side-card">
-  <form ng-submit="$ctrl.submit()">
+  <!-- <form ng-submit="$ctrl.submit()"> -->
+  <form>
     <card-heading>Find Treatment</card-heading>
     <div class="form-group">
       <label for="State">Select State</label>
@@ -8,7 +9,8 @@
     <p class="font-bold text-center">OR</p>
     <div class="form-group">
       <label for="zip">Enter Zipcode</label>
-      <input ng-model="$ctrl.zipcode" class="form-control" type="text" />
+      <input ng-model="$ctrl.zipcode" class="form-control" type="text" maxlength="5" />
+      <p ng-show="$ctrl.zipErr">{{$ctrl.zipErr}}</p>
     </div>
     <div class="form-group">
       <label for="miles">Select Miles</label>
@@ -22,7 +24,7 @@
       </select>
     </div>
     <div class="form-group">
-      <input type="submit" class="btn adn-btn border_radius_add" value="submit" />
+      <input type="submit" ng-click="$ctrl.submit()" class="btn adn-btn border_radius_add" value="submit" />
     </div>
   </form>
 </div>
