fixed popup design

--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -5,7 +5,7 @@
         <thead>
           <tr style="border:none;">
             <th>
-              <h3 class="sub_heading_under_sign_up text-center">Choose your plan :</h3>
+              <h3 class="sub_heading_under_sign_up text-center">Membership Benefits</h3>
             </th>
             <th class="text-center">
               <img src="/themes/addiction/images/silver_membership.png" width="80">
