--- a/app/treatmentCenterMap/searchSidePanel/view.html
+++ b/app/treatmentCenterMap/searchSidePanel/view.html
@@ -43,6 +43,7 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 padding_0">
             <state-select selected="$ctrl.state" on-update="$ctrl.onStateSelect(selected)"></state-select>
+            <p ng-show="$ctrl.stateErr">{{$ctrl.stateErr}}</p>
           </div>
         </div>
         <p class="font-bold text-center">OR</p>
