--- a/app/sidePanel/areaFilterCard/view.html
+++ b/app/sidePanel/areaFilterCard/view.html
@@ -2,7 +2,7 @@
   <card-heading>Filter</card-heading>
   <ul class="list-unstyled">
     <li>
-      <a href class="area-filter-link" ng-class="$ctrl.stateLinkClass" ng-click="$ctrl.goToState()">{{ $ctrl.stateName }}</a>
+      <a href class="area-filter-link" ng-class="$ctrl.stateLinkClass" ng-click="$ctrl.goToState()">{{ $ctrl.fullName }}</a>
     </li>
     <li>
       <label><a href class="area-filter-link" ng-click="$ctrl.goToCities()">View All Cities</a></label>
