fixed button texts

--- a/app/myProfile/addTreatmentCenter/view.html
+++ b/app/myProfile/addTreatmentCenter/view.html
@@ -1,5 +1,5 @@
 <div class="add-treatment-center">
-  <section-heading>Add Treatment Center</section-heading>
+  <section-heading>Add More Treatment Center</section-heading>
   <!-- Content Start -->
   <div class="profile-content">
     <div class="profile-row">
