--- a/app/myProfile/myTreatmentCenters/view.html
+++ b/app/myProfile/myTreatmentCenters/view.html
@@ -5,7 +5,7 @@
     <!-- Add treatment center button -->
     <div class="profile-row">
       <a ui-sref="myProfile.addTreatmentCenter">
-        <span class="btn adn-btn right">Add Treatment Center</span>
+        <span class="btn adn-btn right">Add More Treatment Center</span>
       </a>
     </div>
     <div class="profile-row">
