--- a/app/myProfile/profileMain/view.html
+++ b/app/myProfile/profileMain/view.html
@@ -1,11 +1,11 @@
 <div class="profile-main">
   <section-heading>My Profile</section-heading>
   <div class="profile-content">
-    <div class="profile-row">
+    <!--<div class="profile-row">
       <a ui-sref="myProfile.addTreatmentCenter">
-        <span class="btn adn-btn right">Add Treatment Center</span>
+        <span class="btn adn-btn right">Add More Treatment Center</span>
       </a>
-    </div>
+    </div>-->
     <div class="profile-row">
       <!-- First Name -->
       <div class="adn-row">
