--- a/app/myProfile/sponsorAds/view.html
+++ b/app/myProfile/sponsorAds/view.html
@@ -36,11 +36,13 @@
               </tr>
             </tbody>
           </table>
-          <div class="pagination">
-            <a href="#">&laquo;</a>
-            <a href="javascript:;" ng-click="$ctrl.pageChanged(i)" ng-repeat="i in $ctrl.totalPages track by $index">{{i}}</a>
-            <a href="#">&raquo;</a>
-          </div>
+          <nav class="pagination-nav" aria-label="Page navigation">
+            <ul class="pagination">
+              <li><a href="#">&laquo;</a></li>
+              <li ng-click="$ctrl.pageChanged(i)" ng-repeat="i in $ctrl.totalPages track by $index" class="hide_blank{{i}}"><a href="javascript:;" class="remove_margin">{{i}}</a></li>
+              <li><a href="#">&raquo;</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
     </div>
