--- a/app/addListing/sponsoredPage/view.html
+++ b/app/addListing/sponsoredPage/view.html
@@ -11,85 +11,16 @@
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
         <div ng-dropdown-multiselect="" options="$ctrl.treatmentCenters" ng-click="$event.stopPropagation()" selected-model="$ctrl.treatmentCentersModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
-        <p ng-show="$root.centerSelected.length===0 ">Select any treatment center.</p>
+        <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span>
       </div>
     </div>
     <!-- Search By State Section -->
     <sponsored-state-select></sponsored-state-select>
 
-    <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="tname"> Sponsor Ads: </label>
-            </div>
-            <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
-              <div ng-dropdown-multiselect="" options="$ctrl.sponsored_ad_select" checkboxes="true" selected-model="$ctrl.multiselectModelLayoutIds " extra-settings="$ctrl.multiselectModelSettings"></div>
-
-            </div>
-          </div> -->
-
-    <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
-      <div class="col-md-4 col-sm-4 col-xs-12">
-        <label for="tname"> Normal: </label>
-      </div>
-      <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
-        <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdNormal" ng-click="$event.stopPropagation()" checkboxes="true" selected-model="$ctrl.sponsoredAdNormalModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-      </div>
-    </div>
-
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
-      <div class="col-md-4 col-sm-4 col-xs-12">
-        <label for="cpwd">State</label>
-      </div>
-      <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
-        <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdState" checkboxes="true" selected-model="$ctrl.sponsoredAdStateModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-      </div>
-    </div>
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
-      <div class="col-md-4 col-sm-4 col-xs-12">
-        <label for="cpwd">County: </label>
-      </div>
-      <div class="col-md-8 col-sm-8 col-xs-12">
-        <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdCounty" checkboxes="true" selected-model="$ctrl.sponsoredAdCountyModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-      </div>
-    </div> -->
-    <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
-      <div class="col-md-4 col-sm-4 col-xs-12">
-        <label for="cpwd">City: </label>
-      </div> -->
-    <!-- <div class="col-md-8 col-sm-8 col-xs-12">
-              <searchandselect selecteditem="$ctrl.city" values="$ctrl.cities" key="Key" totalrecords="$ctrl.totalRecords" onscroll="getCities($ctrl.searchKey, pagenumber)"> </searchandselect>
-            </div> -->
-    <!-- <div class="col-md-8 col-sm-8 col-xs-12" infinite-scroll="$ctrl.loadMore()" infinite-scroll-distance="1" infinite-scroll-use-document-bottom="true" infinite-scroll-container="$ctrl.testScroll">
-        <div id="city" name="city" ng-dropdown-multiselect="" options="$ctrl.sponsoredAdCity" ng-click="$event.stopPropagation()" checkboxes="true" selected-model="$ctrl.sponsoredAdCityModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-      </div>
-      <div class="col-md-8 col-sm-8 col-xs-12"> -->
-
-    <!-- <p>Selected: {{ctrl.country.selected}}</p>
-              <ui-select ng-model="ctrl.country.selected" theme="selectize" ng-disabled="ctrl.disabled" style="width: 300px;" title="Choose a country">
-                <ui-select-match placeholder="Select or search a country in the list...">{{$select.selected.name}}</ui-select-match>
-                <ui-select-choices repeat="country in ctrl.countries | filter: $select.search">
-                  <span ng-bind-html="country.name | highlight: $select.search"></span>
-                  <small ng-bind-html="country.code | highlight: $select.search"></small>
-                </ui-select-choices>
-              </ui-select> -->
-
-    <!-- </div> -->
-
-    <!--
-    </div> -->
-    <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="cpwd">Sidepanel: </label>
-            </div>
-            <div class="col-md-8 col-sm-8 col-xs-12">
-              <sidepanel-multiselect></sidepanel-multiselect>
-            </div>
-          </div> -->
-
     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
       <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
         <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
-        <input type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="">
+        <input type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="$ctrl.treatmentCentersModel.length===0 || $root.centerSelected.length===0">
       </div>
     </div>
 
