--- a/app/sidePanel/findTreatmentSideCard/view.html
+++ b/app/sidePanel/findTreatmentSideCard/view.html
@@ -5,13 +5,13 @@
     <div class="form-group">
       <label for="State">Select State</label>
       <state-select on-update="$ctrl.onStateUpdate(selected)"></state-select>
-      <p ng-show="$ctrl.stateErr">{{$ctrl.stateErr}}</p>
+      <span ng-show="$ctrl.stateErr">{{$ctrl.stateErr}}</span>
     </div>
     <p class="font-bold text-center">OR</p>
     <div class="form-group">
       <label for="zip">Enter Zipcode</label>
       <input ng-model="$ctrl.zipcode" class="form-control" type="text" maxlength="5" />
-      <p ng-show="$ctrl.zipErr">{{$ctrl.zipErr}}</p>
+      <span ng-show="$ctrl.zipErr">{{$ctrl.zipErr}}</span>
     </div>
     <div class="form-group">
       <label for="miles">Select Miles</label>
