--- a/app/sidePanel/areaFilterCard/view.html
+++ b/app/sidePanel/areaFilterCard/view.html
@@ -1,5 +1,5 @@
 <div ng-show="$ctrl.display" class="side-card">
-  <card-heading>Filter</card-heading>
+  <card-heading>{{ $ctrl.stateName }}</card-heading>
   <ul class="list-unstyled">
     <li>
       <a href class="area-filter-link" ng-class="$ctrl.stateLinkClass" ng-click="$ctrl.goToState()">{{ $ctrl.stateName }}</a>
