--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -10,14 +10,15 @@
       </a>
     </div>
     <div class="profile-row">
-      <form ng-submit="$ctrl.submit()" class="form-horizontal" enctype="multipart/form-data" novalidate="novalidate" __bizdiag="-1747746453" __biza="WJ__">
+      <form ng-submit="$ctrl.submit()" name="$ctrl.accountSetting" class="form-horizontal" enctype="multipart/form-data" novalidate="novalidate" __bizdiag="-1747746453" __biza="WJ__">
         <div class="adn-row">
           <!-- First Name -->
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="firstname">First Name:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.first_name" type="text" name="first_name" class="form-control required" placeholder="First Name" />
+            <input ng-model="$ctrl.first_name" type="text" name="first_name" class="form-control required" required="true" placeholder="First Name" />
+            <span ng-show="$ctrl.accountSetting.first_name.$error.required" class="help-block">Required</span>
           </div>
         </div>
 
@@ -27,7 +28,8 @@
             <label for="lastname">Last Name:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.last_name" type="text" name="last_name" class="form-control required" placeholder="Last Name" />
+            <input ng-model="$ctrl.last_name" type="text" name="last_name" class="form-control required" required="true" placeholder="Last Name" />
+            <span ng-show="$ctrl.accountSetting.last_name.$error.required" class="help-block">Required</span>
           </div>
         </div>
 
@@ -47,7 +49,8 @@
             <label for="about">About Me:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <textarea ng-model="$ctrl.about_me" name="about_me" type="text" rows="3" cols="100%" class="form-control required" placeholder=""> </textarea>
+            <textarea ng-model="$ctrl.about_me" name="about_me" type="text" rows="3" cols="100%" class="form-control required" required="true" placeholder=""> </textarea>
+            <!-- <span ng-show="$ctrl.accountSetting.about_me.$error.required" class="help-block">Required</span> -->
           </div>
         </div>
 
@@ -71,23 +74,28 @@
           </div>
         </div>
 
+        <div class="adn-row">
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <label>City</label>
+          </div>
+          <div class="col-md-8 col-sm-8 col-xs-12">
+            <select ng-model="$ctrl.city" name="city" ng-change="$ctrl.testZip()" required="true">
+              <option value="">Select City</option>
+              <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities}}">{{cities}}</option>
+            </select>
+            <p ng-show="$ctrl.accountSetting.city.$invalid">Required</p>
+          </div>
+        </div>
+
         <!-- Zipcode -->
         <div class="adn-row">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="zip"> Zipcode: </label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.zipcode" type="text" name="zip" class="form-control required" minlength="5" maxlength="5" placeholder="14102" />
-          </div>
-        </div>
-
-        <!-- City -->
-        <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="city"> City: </label>
-          </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.city" type="text" name="city" class="form-control required" />
+            <input ng-model="$ctrl.zipcode" type="text" name="zipcode" ng-change="$ctrl.testZip()" class="form-control required" number="true" minlength="5" maxlength="5" ng-pattern="/^\d{5}$/" required="true" placeholder="14100" />
+            <span ng-show="$ctrl.accountSetting.zipcode.$invalid" class="help-block">Required and Zip code must be 5 digits</span>
+            <span ng-if="($ctrl.zipFound===0 && $ctrl.accountSetting.zipcode.$valid)" class="help-block">Invalid zip, doesn't match with selected state.</span>
           </div>
         </div>
 
@@ -107,7 +115,9 @@
             <label for="phone"> Phone: </label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.phone" type="text" name="phone" number="true" class="form-control required" maxlength="10" minlength="10" placeholder="09855438504" />
+            <input ng-model="$ctrl.phone" type="text" name="phone" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhone()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14">
+            <p ng-show="$ctrl.accountSetting.phone.$error.pattern || $ctrl.accountSetting.phone.$error.minlength || $ctrl.accountSetting.phone.$error.maxlength" class="help-block">Invalid US number.</p>
+            <p ng-show="$ctrl.accountSetting.phone.$error.required" class="help-block">Required</p>
           </div>
         </div>
 
@@ -129,7 +139,7 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn adn-btn right">Submit</button>
+            <button type="submit" class="btn adn-btn right" ng-disabled="$ctrl.accountSetting.phone.$invalid || ($ctrl.zipFound === 0) || $ctrl.accountSetting.city.$invalid || $ctrl.accountSetting.last_name.$invalid || $ctrl.accountSetting.first_name.$invalid">Submit</button>
           </div>
         </div>
       </form>
