--- a/app/myProfile/bannerAds/add/view.html
+++ b/app/myProfile/bannerAds/add/view.html
@@ -42,7 +42,8 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
             <!--  <input name="image" id="image" class="span2 text_file center_image" ng-model="$ctrl.image" type="file"> -->
-            <input file-model="$ctrl.content" type="file" name="content" id="content" class="center_image" accept="image/*" />
+            <input file-model="$ctrl.content" type="file" name="content" id="content" onchange="angular.element(this).scope().imagePreview(this)" class="center_image" accept="image/*" />
+            <img id="logo_preview" ng-src="{{$ctrl.preview_img}}" width="100" name="logo_preview" />
             <span ng-show="$ctrl.err_type">Please upload an image only. </span>
           </div>
         </div>
@@ -52,7 +53,7 @@
             <label for="cpwd">Center Web Link</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" type="text" required="true" placeholder="Center Web Link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+([a-z]{2,10})?(?:[\.])+[a-z]{2,10}$/" />
+            <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" type="text" required="true" placeholder="Center Web Link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+([a-z 0-9]{2,20})?(?:[\.])+[a-z]{2,10}$/" />
             <span ng-show="advertisementForm.center_web_link.$error.pattern" class="help-block">Invalid Format(Correct format: www.google.com)</span>
             <span ng-show="advertisementForm.center_web_link.$error.required" class="help-block">Weburl can't be blank.</span>
           </div>
