--- a/app/myProfile/bannerAds/edit/view.html
+++ b/app/myProfile/bannerAds/edit/view.html
@@ -48,7 +48,7 @@
             <label for="cpwd">Center Web Link</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" placeholder="Center Web Link" type="text" required ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+([a-z]{2,10})?(?:[\.])+[a-z]{2,10}$/" />
+            <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" placeholder="Center Web Link" type="text" required ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+([a-z 0-9]{2,20})?(?:[\.])+[a-z]{2,10}$/" />
             <span ng-show="advertisementEditForm.center_web_link.$error.pattern" class="help-block">Invalid Format (Correct format: www.google.com)</span>
             <span ng-show="advertisementEditForm.center_web_link.$error.required" class="help-block">Weburl can't be blank.</span>
           </div>
