my profile changes

--- a/app/addListing/bannerAd/view.html
+++ b/app/addListing/bannerAd/view.html
@@ -31,7 +31,7 @@
     <!-- Content -->
     <div class="adn-row">
       <div class="col-md-4 col-sm-4 col-xs-12">
-        <label for="upload_img">Content</label>
+        <label for="upload_img">Image</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <!--  <input name="image" id="image" class="span2 text_file center_image" ng-model="$ctrl.image" type="file"> -->
