Updated addlisting sponsoredPages

--- a/app/addListing/formNavSection/view.html
+++ b/app/addListing/formNavSection/view.html
@@ -1,6 +1,7 @@
 <div class="profile-nav add-listing-nav">
   <!-- cart -->
-  <div ng-show="$root.cityModel.length || $root.countyModel.length || $root.statesSel.length">
+  <!-- <div ng-show="$root.cityModel.length || $root.countyModel.length || $root.statesSel.length"> -->
+  <div ng-show="">
     <div class="wp-flybox_tab" style="width: auto; display: inline-block; overflow: hidden; position: fixed; border: 0px none; left:0px;top: 50%; z-index: 99991;">
       <p class="add_to_cart">Cart</p>
       <div class="wp_but">
