--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,7 @@
     </script>
   </head>
 
-  <body>
+  <body ng-click="$event.stopPropagation()">
     <!-- First and second navigation -->
     <header></header>
     <div class="wp-flybox_tab call_us" style="width: auto; display: inline-block; overflow: hidden; position: fixed; border: 0px none; right: -21px; top: 50%; z-index: 999;">
