--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -1,7 +1,7 @@
 <!-- {{$root.cityModel}} {{$root.countyModel}} -->
 <div class="container">
   <div class="row">
-    <div class="col-xs-8 margin-left">
+    <div class="col-xs-8 col-md-12 margin-left">
       <div class="panel panel-info">
         <div class="panel-heading">
           <div class="panel-title">
@@ -10,31 +10,31 @@
                 <h5>
                   <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
               </div>
-              <div class="col-xs-6">
+              <!-- <div class="col-xs-6">
                 <button type="button" ng-click="$ctrl.continueShop()" class="btn btn-primary btn-sm btn-block">
                   <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
                 </button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
         <div class="panel-body">
           <div class="row" ng-repeat="(key,state) in $root.statesSel">
-            <div class="col-xs-2">
+            <div class="col-xs-2 col-md-2">
               <img class="img-responsive" ng-src="themes/addiction/images/{{$root.statesDetail[key].state_name}}.png">
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-4 col-md-4">
               <h4 class="product-name">
                 <strong>{{state}}</strong>
               </h4>
             </div>
-            <div class="col-xs-6">
-              <div class="col-xs-4">
+            <div class="col-xs-6 col-md-6">
+              <div class="col-xs-4 col-md-4">
                 <h6>
                   <strong>15</strong>
                 </h6>
               </div>
-              <div class="col-xs-2 text-right">
+              <div class="col-xs-4 text-right">
                 <button type="button" ng-click="$ctrl.deleteCartItem(key,'state')" class="btn btn-link btn-xs">
                   <span class="glyphicon glyphicon-trash"> </span>
                 </button>
@@ -44,7 +44,6 @@
           </div>
 
           <div class="row" ng-repeat="(key,counties) in $root.counties">
-
             <div class="col-xs-2">
               <img class="img-responsive" ng-src="themes/addiction/images/{{counties.state_name}}.png">
             </div>
