--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -7,8 +7,38 @@
         <state-map ng-click="$ctrl.onStateSelect(state)" on-select="$ctrl.onStateSelect(state)"></state-map>
       </div>
     </div>
-    <div class="col-sm-6">
-      <div ng-dropdown-multiselect="" options="$ctrl.example9data" selected-model="$ctrl.example9model" extra-settings="$ctrl.example9settings"></div>
+
+    <div class="col-md-6">
+      <div class="col-md-4">
+        <div ng-dropdown-multiselect="" id="demographic" options="$ctrl.demographic" translation-texts="$ctrl.buttonTxtDemographic" selected-model="$ctrl.demographicModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
+
+      </div>
+
+      <div class="col-md-4">
+        <div ng-dropdown-multiselect="" id="treatmentApproach" options="$ctrl.treatmentApproach" translation-texts="$ctrl.buttonTxtTreatmentApproach" selected-model="$ctrl.treatmentApproachModel" extra-settings="$ctrl.multiselectModelSettings" events="" checkboxes="true"></div>
+
+      </div>
+
+      <div class="col-md-4">
+        <div ng-dropdown-multiselect="" id="setting" options="$ctrl.setting" translation-texts="$ctrl.buttonTxtSetting" selected-model="$ctrl.settingModel" extra-settings="$ctrl.multiselectModelSettings" events="" checkboxes="true"></div>
+        <div style="margin-bottom:300px;"></div>
+      </div>
+
+      <div class="col-md-4">
+        <div ng-dropdown-multiselect="" id="additionalServices" options="$ctrl.additionalServices" translation-texts="$ctrl.buttonTxtAdditionalServices" selected-model="$ctrl.additionalServicesModel" extra-settings="$ctrl.multiselectModelSettings" events="" checkboxes="true"></div>
+
+      </div>
+
+      <div class="col-md-4">
+        <div ng-dropdown-multiselect="" id="payment" options="$ctrl.payment" selected-model="$ctrl.paymentModel" translation-texts="$ctrl.buttonTxtPayment" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
+
+      </div>
+
+      <div class="col-md-4">
+        <div ng-dropdown-multiselect="" id="byDrug" options="$ctrl.byDrug" selected-model="$ctrl.byDrugModel" translation-texts="$ctrl.buttonTxtByDrug" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
+      </div>
     </div>
+
   </div>
+
 </div>
