--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -6,10 +6,14 @@
         <div class="col-lg-12 col-sm-12 col-xs-12">
           <form-nav-section></form-nav-section>
         </div>
-
         <div class="{{$ctrl.colMd}} col-sm-12 col-xs-12" ng-init="$ctrl.colMd='col-md-8'">
           <div class="left_content">
             <ui-view></ui-view>
+          </div>
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="left_content">
+            <div ui-view="cartDetails" ng-show="$root.cityModel.length || $root.countyModel.length || $root.statesSel.length"></div>
           </div>
         </div>
       </form>
