changed table in sponsored page

--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -1,39 +1,33 @@
-<div>
-  <!-- <section-heading>Select State</section-heading> -->
-  <!--- Map content  Start   -->
-  <div onselectstart="return false;" class="unselectable col-sm-12">
-    <div id="mapwrapper" class="col-sm-6">
-      <div id="map_base">
-        <state-map ng-click="$ctrl.onStateSelect(state)" on-select="$ctrl.onStateSelect(state)"></state-map>
-      </div>
+<!-- <section-heading>Select State</section-heading> -->
+<!--- Map content  Start   -->
+<div onselectstart="return false;" class="unselectable col-sm-12">
+  <div id="mapwrapper" class="col-sm-12">
+    <div id="map_base">
+      <state-map ng-click="$ctrl.onStateSelect(state)" on-select="$ctrl.onStateSelect(state)"></state-map>
     </div>
-    <div class="additional_filters">
-      <div class="col-md-6">
-        <div class="col-md-6">
-          <div ng-dropdown-multiselect="" id="demographic" options="$ctrl.demographic" translation-texts="$ctrl.buttonTxtDemographic" selected-model="$ctrl.demographicModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
-        </div>
-        <div class="col-md-6">
-          <div ng-dropdown-multiselect="" id="treatmentApproach" options="$ctrl.treatmentApproach" translation-texts="$ctrl.buttonTxtTreatmentApproach" selected-model="$ctrl.treatmentApproachModel" extra-settings="$ctrl.treatment" events="" checkboxes="true"></div>
-        </div>
-        <div style="margin-bottom:300px;"></div>
+  </div>
+  <div class="additional_filters">
+    <div class="col-sm-12">
+      <div style="width: 20%;" class="col-sm-3">
+        <div ng-dropdown-multiselect="" id="demographic" options="$ctrl.demographic" translation-texts="$ctrl.buttonTxtDemographic" selected-model="$ctrl.demographicModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
       </div>
-      <div class="col-md-6 pull-right">
-        <div class="col-md-6">
-          <div ng-dropdown-multiselect="" id="payment" options="$ctrl.payment" selected-model="$ctrl.paymentModel" translation-texts="$ctrl.buttonTxtPayment" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
-        </div>
-        <div class="col-md-6">
-          <div ng-dropdown-multiselect="" id="additionalServices" options="$ctrl.additionalServices" translation-texts="$ctrl.buttonTxtAdditionalServices" selected-model="$ctrl.additionalServicesModel" extra-settings="$ctrl.additional_services" events="" checkboxes="true"></div>
-        </div>
-        <div style="margin-bottom:300px;"></div>
+      <div class="col-md-3">
+        <div ng-dropdown-multiselect="" id="treatmentApproach" options="$ctrl.treatmentApproach" translation-texts="$ctrl.buttonTxtTreatmentApproach" selected-model="$ctrl.treatmentApproachModel" extra-settings="$ctrl.treatment" events="" checkboxes="true"></div>
       </div>
-      <div class="col-md-6 pull-right">
-        <div class="col-md-6">
-          <div ng-dropdown-multiselect="" id="setting" options="$ctrl.setting" translation-texts="$ctrl.buttonTxtSetting" selected-model="$ctrl.settingModel" extra-settings="$ctrl.settings" events="" checkboxes="true"></div>
-        </div>
-        <div class="col-md-6">
-          <div ng-dropdown-multiselect="" id="byDrug" options="$ctrl.byDrug" selected-model="$ctrl.byDrugModel" translation-texts="$ctrl.buttonTxtByDrug" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
-        </div>
-        <div style="margin-bottom:300px;"></div>
+      <div class="col-md-3">
+        <div ng-dropdown-multiselect="" id="payment" options="$ctrl.payment" selected-model="$ctrl.paymentModel" translation-texts="$ctrl.buttonTxtPayment" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
+      </div>
+      <div class="col-md-3">
+        <div ng-dropdown-multiselect="" id="additionalServices" options="$ctrl.additionalServices" translation-texts="$ctrl.buttonTxtAdditionalServices" selected-model="$ctrl.additionalServicesModel" extra-settings="$ctrl.additional_services" events="" checkboxes="true"></div>
+      </div>
+      <div style="margin-bottom:30%;"></div>
+    </div>
+    <div class="col-md-12 pull-right">
+      <div class="col-md-3">
+        <div ng-dropdown-multiselect="" id="setting" options="$ctrl.setting" translation-texts="$ctrl.buttonTxtSetting" selected-model="$ctrl.settingModel" extra-settings="$ctrl.settings" events="" checkboxes="true"></div>
+      </div>
+      <div class="col-md-4">
+        <div ng-dropdown-multiselect="" id="byDrug" options="$ctrl.byDrug" selected-model="$ctrl.byDrugModel" translation-texts="$ctrl.buttonTxtByDrug" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
       </div>
     </div>
   </div>
