--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -11,11 +11,11 @@
             <ui-view></ui-view>
           </div>
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="left_content">
+        <!-- <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="left_content_old">
             <div ui-view="cartDetails" ng-show="$root.cityModel.length || $root.countyModel.length || $root.statesSel.length"></div>
           </div>
-        </div>
+        </div> -->
       </form>
       <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12" ng-init="$ctrl.sideAdvertisement = 0" ng-show="$ctrl.sideAdvertisement !== 1">
         <div class="side-card ">
