--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -1,121 +1,119 @@
 <!-- {{$root.cityModel}} {{$root.countyModel}} -->
 <div class="container">
   <div class="row">
-    <div class="col-xs-8 col-md-12 margin-left">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <div class="panel-title">
-            <div class="row">
-              <div class="col-xs-6">
-                <h5>
-                  <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
-              </div>
-              <!-- <div class="col-xs-6">
-                <button type="button" ng-click="$ctrl.continueShop()" class="btn btn-primary btn-sm btn-block">
-                  <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
-                </button>
-              </div> -->
-            </div>
-          </div>
+    <div class="col-xs-8 col-md-12 margin-left" style="margin-top:25%;">
+    </div>
+  </div>
+</div>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <div class="panel-title">
+      <div class="row">
+        <div class="col-xs-6">
+          <h5>
+            <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
         </div>
-        <div class="panel-body">
-          <div class="row" ng-repeat="(key,state) in $root.statesSel">
-            <div class="col-xs-2 col-md-2">
-              <img class="img-responsive" ng-src="themes/addiction/images/{{$root.statesDetail[key].state_name}}.png">
-            </div>
-            <div class="col-xs-4 col-md-4">
-              <h4 class="product-name">
-                <strong>{{state}}</strong>
-              </h4>
-            </div>
-            <div class="col-xs-6 col-md-6">
-              <div class="col-xs-4 col-md-4">
-                <h6>
-                  <strong>15</strong>
-                </h6>
-              </div>
-              <div class="col-xs-4 text-right">
-                <button type="button" ng-click="$ctrl.deleteCartItem(key,'state')" class="btn btn-link btn-xs">
-                  <span class="glyphicon glyphicon-trash"> </span>
-                </button>
-              </div>
-            </div>
-            <hr style="margin-top:8%;">
-          </div>
-
-          <div class="row" ng-repeat="(key,counties) in $root.counties">
-            <div class="col-xs-2">
-              <img class="img-responsive" ng-src="themes/addiction/images/{{counties.state_name}}.png">
-            </div>
-            <div class="col-xs-4">
-              <h4 class="product-name">
-                <strong>{{counties.name}}</strong>
-              </h4>
-              <!-- <h4>
-                <small>Product description</small>
-              </h4> -->
-            </div>
-            <div class="col-xs-6">
-              <div class="col-xs-4">
-                <h6>
-                  <strong>{{counties.price}}
-                  </strong>
-                </h6>
-              </div>
-              <div class="col-xs-4 text-right">
-                <button type="button" ng-click="$ctrl.deleteCartItem(key,'county')" class="btn btn-link btn-xs">
-                  <span class="glyphicon glyphicon-trash"> </span>
-                </button>
-              </div>
-            </div>
-            <hr style="margin-top:8%;">
-
-          </div>
-
-          <div class="row" ng-repeat="(key,cities) in $root.cities">
-            <div class="col-xs-2">
-              <img class="img-responsive" ng-src="themes/addiction/images/{{cities.state_name}}.png">
-            </div>
-            <div class="col-xs-4">
-              <h4 class="product-name">
-                <strong>{{cities.name}}</strong>
-              </h4>
-              <!-- <h4>
-                <small>Product description</small>
-              </h4> -->
-            </div>
-            <div class="col-xs-6">
-              <div class="col-xs-4">
-                <h6>
-                  <strong>{{cities.price}}
-                  </strong>
-                </h6>
-              </div>
-              <div class="col-xs-4 text-right">
-                <button type="button" ng-click="$ctrl.deleteCartItem(key,'city')" class="btn btn-link btn-xs">
-                  <span class="glyphicon glyphicon-trash"> </span>
-                </button>
-              </div>
-            </div>
-            <hr style="margin-top:8%;">
-          </div>
-
-        </div>
-        <div class="panel-footer">
-          <div class="row text-center">
-            <div class="col-xs-9">
-              <h4 class="text-right">Total
-                <strong>${{$root.total}}.00</strong>
-              </h4>
-            </div>
-            <div class="col-xs-3">
-              <button type="button" class="btn btn-success btn-block">
-                Checkout
-              </button>
-            </div>
-          </div>
-        </div>
+        <!-- <div class="col-xs-6">
+        <button type="button" ng-click="$ctrl.continueShop()" class="btn btn-primary btn-sm btn-block">
+          <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
+        </button>
+      </div> -->
       </div>
     </div>
+  </div>
+</div>
+<table class="responstable">
+  <tbody>
+    <tr>
+      <th>Treatment Center</th>
+      <th>State</th>
+      <th>City</th>
+      <th>County</th>
+      <th>Demographic</th>
+      <th>Treatment Approach</th>
+      <th>Payment</th>
+      <th>Additional Services</th>
+      <th>Setting</th>
+      <th>By Drug</th>
+      <th>Total</th>
+      <th>Delete</th>
+    </tr>
+    <!--state-->
+    <tr ng-repeat="(key,state) in $root.statesSel">
+      <td>
+        Treatment Center
+      </td>
+      <td>{{state}}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>15</td>
+      <td>
+        <button type="button" ng-click="$ctrl.deleteCartItem(key,'state')" class="btn btn-link btn-xs">
+          <span class="glyphicon glyphicon-trash"> </span>
+        </button>
+      </td>
+    </tr>
+    <!--city -->
+    <tr ng-repeat="(key,cities) in $root.cities">
+      <td>
+        Treatment Center
+      </td>
+      <td></td>
+      <td>{{cities.name}}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>{{cities.price}}</td>
+      <td>
+        <button type="button" ng-click="$ctrl.deleteCartItem(key,'city')" class="btn btn-link btn-xs">
+          <span class="glyphicon glyphicon-trash"> </span>
+        </button>
+      </td>
+    </tr>
+    <!--county -->
+    <tr ng-repeat="(key,counties) in $root.counties">
+      <td>
+        Treatment Center
+      </td>
+      <td></td>
+      <td></td>
+      <td>{{counties.name}}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>{{counties.price}}</td>
+      <td>
+        <button type="button" ng-click="$ctrl.deleteCartItem(key,'county')" class="btn btn-link btn-xs">
+          <span class="glyphicon glyphicon-trash"> </span>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div class="panel-footer">
+  <div class="row text-center">
+    <div class="col-xs-12">
+      <h4 class="text-right">Total
+        <strong>${{$root.total}}.00</strong>
+      </h4>
+    </div>
+    <!-- <div class="col-xs-3">
+      <button type="button" class="btn btn-success btn-block">
+        Checkout
+      </button>
+    </div> -->
   </div>
 </div>
