--- a/app/addListing/sponsoredPage/view.html
+++ b/app/addListing/sponsoredPage/view.html
@@ -16,7 +16,7 @@
     </div>
     <!-- Search By State Section -->
     <sponsored-state-select></sponsored-state-select>
-
+    <cart-detail></cart-detail>
     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
       <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
         <input id="previous" class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
