--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -8,7 +8,7 @@
   </div>
   <div class="additional_filters">
     <div class="col-sm-12">
-      <div style="width: 20%;" class="col-sm-3">
+      <div class="col-sm-3">
         <div ng-dropdown-multiselect="" id="demographic" options="$ctrl.demographic" translation-texts="$ctrl.buttonTxtDemographic" selected-model="$ctrl.demographicModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
       </div>
       <div class="col-md-3">
@@ -17,12 +17,12 @@
       <div class="col-md-3">
         <div ng-dropdown-multiselect="" id="payment" options="$ctrl.payment" selected-model="$ctrl.paymentModel" translation-texts="$ctrl.buttonTxtPayment" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
       </div>
-      <div class="col-md-3">
-        <div ng-dropdown-multiselect="" id="additionalServices" options="$ctrl.additionalServices" translation-texts="$ctrl.buttonTxtAdditionalServices" selected-model="$ctrl.additionalServicesModel" extra-settings="$ctrl.additional_services" events="" checkboxes="true"></div>
-      </div>
       <div style="margin-bottom:30%;"></div>
     </div>
     <div class="col-md-12 pull-right">
+      <div class="col-md-3">
+        <div ng-dropdown-multiselect="" id="additionalServices" options="$ctrl.additionalServices" translation-texts="$ctrl.buttonTxtAdditionalServices" selected-model="$ctrl.additionalServicesModel" extra-settings="$ctrl.additional_services" events="" checkboxes="true"></div>
+      </div>
       <div class="col-md-3">
         <div ng-dropdown-multiselect="" id="setting" options="$ctrl.setting" translation-texts="$ctrl.buttonTxtSetting" selected-model="$ctrl.settingModel" extra-settings="$ctrl.settings" events="" checkboxes="true"></div>
       </div>
